doc: v1.0.2